sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:11: error: not found: value getNombrevaleurs
		for (i<-getNombrevaleurs()-2 to 0 by -1){
                        ^